# PicoDVI

software/apps/: CMakeLists.txt
software/apps/colour_terminal_audio/: CMakeLists.txt  main.c
software/apps/scratch_audio/: CMakeLists.txt  bach_fugue_2_1.h  bach_packed_midi_1.h  bach_packed_midi_2.h  font_inv.h  main.c  midi-parser.c  pitch_bend_packed_midi.h  u_packed_midi.c  u_packed_midi.h  u_synth.c  u_synth.h  u_synth_tone_tables.h  us_adsr.c  us_adsr.h  us_pitch.c  us_pitch.h  us_pm.c  us_pm.h  us_tuner.c  us_tuner.h  us_tuner_notes.h  us_voice.c  us_voice.h  us_voices.c  us_voices.h  us_wave.c  us_wave.h
software/apps/scratch_audio/utils/: a.out  main.c
software/apps/scratch_audio/utils/midi-packer/: output.txt  pitch_bend_1.mid
software/apps/scratch_audio/utils/midi-packer/src/main/java/org/fruitbat/midipacker/: CompSyn.java  Main.java  MidiPacker.java  PrSyn.java  PrnSyn.java  Syn.java  SynWriter.java  SynWriter1.java  SynWriterNull.java  TrackHandler.java  TrackTempo.java  Voice.java  VoiceGroup.java  VoiceGroups.java
software/apps/tiles_and_sprites_audio/: main.c
software/libdvi/: data_packet.c  data_packet.h  dvi.c
